2004-01-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_NO_CLONE_DETACHED for 2.6.2+ kernels.

	* catgets/Makefile ($(objpfx)de.msg): Run sed in C locale.

	* sysdeps/unix/sysv/linux/readahead.c (__readahead): Use off64_t
	instead of loff_t.  Include <fcntl.h>.
	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h: Add readahead prototype.
	* sysdeps/unix/sysv/linux/arm/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/cris/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/hppa/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/m68k/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.

	* elf/dl-load.c: Don't add attribute_relro to max_dirnamelen.

	* sysdeps/generic/inttypes.h: Fix PRI*FAST{16,32} macros.

2003-12-31  Bruno Haible  <bruno@clisp.org>

	* iconvdata/iso_6937-2.c (to_ucs4): Map 0x7E to U+007E, not U+203E.
	Map 0xA6 to U+0023. Map 0xA8 to U+00A4.
	(to_ucs4_comb): Map 0xC5 0x20 to U+00AF.
	(from_ucs4): Map U+00ED to 0xC2 0x69, not 0xC2 0xE9.
	(BODY for TO_LOOP): Don't map U+02DC. Map U+02DD to 0xCD 0x20, not
	0x00 0x20. Don't map U+2500..U+25E3.

2004-01-19  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (get_subexp): Remove bkref_str variable.
	Extend buffers if needed before comparisons.
	(get_subexp_sub): Handle clean_state_log_if_needed failure.

2004-01-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i486/bits/atomic.h (atomic_add): Fix test for using
	atomic_decrement.  Patch by Davin McCall.

2004-01-13  Daniel Jacobowitz  <drow@mvista.com>

	* sysdeps/powerpc/nofpu/sim-full.c (__sim_exceptions)